--- a/hfsinspect.1
+++ b/hfsinspect.1
@@ -203,9 +203,9 @@ Feel the firehose.
 .Nn
 .\" .Bl -diag
 .\" .It Diagnostic Tag
-.\" Diagnostic informtion here.
+.\" Diagnostic information here.
 .\" .It Diagnostic Tag
-.\" Diagnostic informtion here.
+.\" Diagnostic information here.
 .\" .El
 .Sh COMPATIBILITY
 .Nn
@@ -218,7 +218,7 @@ Feel the firehose.
 .Sh STANDARDS
 .Rs
 .%T "HFS Plus Volume Format"
-.%R "Techincal Note TN1150"
+.%R "Technical Note TN1150"
 .%J "Apple Developer Connection"
 .%Q "Apple Computer, Inc."
 .%D "Mar 05, 2004"
@@ -228,7 +228,7 @@ Feel the firehose.
 .Sh REFERENCES
 .Rs
 .%T "Secrets of the GPT"
-.%R "Techincal Note TN2166"
+.%R "Technical Note TN2166"
 .%J "Apple Developer Connection"
 .%Q "Apple Computer, Inc."
 .%D "Nov 06, 2006"
